// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Plugin System > Basic Plugin Loading > should allow plugins to use defEffect 1`] = `
[
  {
    "activeTools": [
      "testTool",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Do something",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {},
          "toolCallId": "call_test",
          "toolName": "testTool",
          "type": "tool-call",
        },
        {
          "text": "Step 1",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "testTool",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Do something",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Step 1",
              "type": "text",
            },
            {
              "input": {},
              "toolCallId": "call_test",
              "toolName": "testTool",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "ok": true,
                },
              },
              "toolCallId": "call_test",
              "toolName": "testTool",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Step 2",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Basic Plugin Loading > should allow plugins to use defState 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Start the counter",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Counter initialized!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Basic Plugin Loading > should allow plugins to use defTool 1`] = `
[
  {
    "activeTools": [
      "add",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Add 5 and 3",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "a": 5,
            "b": 3,
          },
          "toolCallId": "call_add",
          "toolName": "add",
          "type": "tool-call",
        },
        {
          "text": "Let me calculate...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "add",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Add 5 and 3",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Let me calculate...",
              "type": "text",
            },
            {
              "input": {
                "a": 5,
                "b": 3,
              },
              "toolCallId": "call_add",
              "toolName": "add",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "result": 8,
                },
              },
              "toolCallId": "call_add",
              "toolName": "add",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "The answer is 8!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Basic Plugin Loading > should load a simple plugin and make its methods available 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <GREETING>
 Hello, World!
  </GREETING>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Say <GREETING>",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Greetings!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Basic Plugin Loading > should support multiple plugins 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <FOO>
 foo-value
  </FOO>
  <BAR>
 bar-value
  </BAR>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Use <FOO> and <BAR>",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Done!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Edge Cases > should handle async plugin methods 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <ASYNC_DATA>
 async-value
  </ASYNC_DATA>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Use async data",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Async done!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Edge Cases > should handle plugin methods that return void 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<setup>
System is configured
</setup>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Check setup",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Setup complete!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Edge Cases > should work with empty plugins array 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <TEST>
 value
  </TEST>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Hello",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "No plugins!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Edge Cases > should work without plugins property 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <TEST>
 value
  </TEST>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Hello",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "No plugins config!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Plugin Re-execution > should maintain plugin method availability across re-executions 1`] = `
[
  {
    "activeTools": [
      "myTool",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Do something",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {},
          "toolCallId": "call_1",
          "toolName": "myTool",
          "type": "tool-call",
        },
        {
          "text": "First step",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "myTool",
    ],
    "input": {
      "prompt": [
        {
          "content": [
            {
              "text": "Do something",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "First step",
              "type": "text",
            },
            {
              "input": {},
              "toolCallId": "call_1",
              "toolName": "myTool",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "ok": true,
                },
              },
              "toolCallId": "call_1",
              "toolName": "myTool",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Second step",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > Type Safety > should provide correct types for plugin methods 1`] = `
[
  {
    "activeTools": [],
    "input": {
      "prompt": [
        {
          "content": "<variables>
  <TEST>
 42
  </TEST>
</variables>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Use the custom value",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Done!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should handle exclusive tool mode 1`] = `
[
  {
    "activeTools": [
      "globalTool",
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [exclusive] Exclusive task

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Use exclusive tools",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "exclusive",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "taskTool",
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [exclusive] Exclusive task

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Use exclusive tools",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "exclusive",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Exclusive task"",
                  "success": true,
                  "taskId": "exclusive",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Task with exclusive tools active",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should handle task with all extensions combined 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [full] Full featured task

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Execute the full featured task",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "full",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
      "analyze",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [full] Full featured task

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>
<task_full_instructions>
Perform thorough analysis with attention to detail.
</task_full_instructions>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Execute the full featured task",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "full",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Full featured task"",
                  "success": true,
                  "taskId": "full",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "data": "test data",
          },
          "toolCallId": "call_analyze",
          "toolName": "analyze",
          "type": "tool-call",
        },
        {
          "text": "Full featured task...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
      "analyze",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [full] Full featured task

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>
<task_full_instructions>
Perform thorough analysis with attention to detail.
</task_full_instructions>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Execute the full featured task",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "full",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Full featured task"",
                  "success": true,
                  "taskId": "full",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
        {
          "content": [
            {
              "text": "Full featured task...",
              "type": "text",
            },
            {
              "input": {
                "data": "test data",
              },
              "toolCallId": "call_analyze",
              "toolName": "analyze",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "analysis": "Analyzed: test data",
                },
              },
              "toolCallId": "call_analyze",
              "toolName": "analyze",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Analysis complete!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should inject per-task system prompts (SystemPart) 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [analysis] Analyze data

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start analysis",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "analysis",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [analysis] Analyze data

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>
<analysis_rules>
Be precise and methodical. Format output as JSON.
</analysis_rules>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start analysis",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "analysis",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Analyze data"",
                  "success": true,
                  "taskId": "analysis",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Analysis task with custom system part",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should inject per-task system prompts (array) 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [review] Review code

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start code review",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "review",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [review] Review code

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>
<reviewer_role>
You are a senior code reviewer.
</reviewer_role>
<review_criteria>
Focus on: security, performance, readability.
</review_criteria>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start code review",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "review",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Review code"",
                  "success": true,
                  "taskId": "review",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Code review task with multiple system parts",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should inject per-task system prompts (string) 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [creative] Write creative story

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start the creative task",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "creative",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [creative] Write creative story

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>
<task_creative_instructions>
Be creative and imaginative. Use vivid language.
</task_creative_instructions>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start the creative task",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "creative",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Write creative story"",
                  "success": true,
                  "taskId": "creative",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Creative writing task active",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should inject per-task tools when task is in progress 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [research] Research AI trends

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start and complete the research task",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "research",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
        {
          "text": "Starting research...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
      "webSearch",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [research] Research AI trends

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start and complete the research task",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Starting research...",
              "type": "text",
            },
            {
              "input": {
                "taskId": "research",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Research AI trends"",
                  "success": true,
                  "taskId": "research",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "query": "AI trends",
          },
          "toolCallId": "call_search",
          "toolName": "webSearch",
          "type": "tool-call",
        },
        {
          "text": "Task started, now searching...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
      "webSearch",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [research] Research AI trends

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start and complete the research task",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Starting research...",
              "type": "text",
            },
            {
              "input": {
                "taskId": "research",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Research AI trends"",
                  "success": true,
                  "taskId": "research",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
        {
          "content": [
            {
              "text": "Task started, now searching...",
              "type": "text",
            },
            {
              "input": {
                "query": "AI trends",
              },
              "toolCallId": "call_search",
              "toolName": "webSearch",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "results": [
                    "Result for AI trends",
                  ],
                },
              },
              "toolCallId": "call_search",
              "toolName": "webSearch",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Search completed!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should inject per-task variables when task is in progress 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [translate] Translate document

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start translation with context",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "translate",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [translate] Translate document

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start translation with context",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "translate",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Translate document"",
                  "success": true,
                  "taskId": "translate",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Translation task with context variables",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > Per-Task Extensions > should remove task extensions when task completes 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [temp] Temporary task

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start and complete the temporary task",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "temp",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
      "tempTool",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [temp] Temporary task

### Pending (0)
  (none)

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>
<task_temp_instructions>
Temporary instructions
</task_temp_instructions>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start and complete the temporary task",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "temp",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Temporary task"",
                  "success": true,
                  "taskId": "temp",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "temp",
          },
          "toolCallId": "call_complete",
          "toolName": "completeTask",
          "type": "tool-call",
        },
        {
          "text": "Task in progress...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (0)
  (none)

### Completed (1)
  - [temp] Temporary task

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start and complete the temporary task",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "temp",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Temporary task"",
                  "success": true,
                  "taskId": "temp",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
        {
          "content": [
            {
              "text": "Task in progress...",
              "type": "text",
            },
            {
              "input": {
                "taskId": "temp",
              },
              "toolCallId": "call_complete",
              "toolName": "completeTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Completed task: "Temporary task"",
                  "success": true,
                  "taskId": "temp",
                },
              },
              "toolCallId": "call_complete",
              "toolName": "completeTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Task completed, extensions removed",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > should create a task list with startTask and completeTask tools 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (2)
  - [1] Test Task
  - [2] Another Task

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Complete task 1",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "1",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
        {
          "text": "Starting task...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [1] Test Task

### Pending (1)
  - [2] Another Task

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Complete task 1",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Starting task...",
              "type": "text",
            },
            {
              "input": {
                "taskId": "1",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Test Task"",
                  "success": true,
                  "taskId": "1",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "1",
          },
          "toolCallId": "call_complete",
          "toolName": "completeTask",
          "type": "tool-call",
        },
        {
          "text": "Working on it...",
          "type": "text",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [2] Another Task

### Completed (1)
  - [1] Test Task

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Complete task 1",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "text": "Starting task...",
              "type": "text",
            },
            {
              "input": {
                "taskId": "1",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Started task: "Test Task"",
                  "success": true,
                  "taskId": "1",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
        {
          "content": [
            {
              "text": "Working on it...",
              "type": "text",
            },
            {
              "input": {
                "taskId": "1",
              },
              "toolCallId": "call_complete",
              "toolName": "completeTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Completed task: "Test Task"",
                  "success": true,
                  "taskId": "1",
                },
              },
              "toolCallId": "call_complete",
              "toolName": "completeTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Task completed!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > should handle starting a non-existent task gracefully 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [1] Task 1

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start task nonexistent",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "input": {
            "taskId": "nonexistent",
          },
          "toolCallId": "call_start",
          "toolName": "startTask",
          "type": "tool-call",
        },
      ],
      "finishReason": "tool-calls",
    },
  },
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (0)
  (none)

### Pending (1)
  - [1] Task 1

### Completed (0)
  (none)

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Start task nonexistent",
              "type": "text",
            },
          ],
          "role": "user",
        },
        {
          "content": [
            {
              "input": {
                "taskId": "nonexistent",
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-call",
            },
          ],
          "role": "assistant",
        },
        {
          "content": [
            {
              "output": {
                "type": "json",
                "value": {
                  "message": "Task with ID "nonexistent" not found",
                  "success": false,
                  "taskId": "nonexistent",
                },
              },
              "toolCallId": "call_start",
              "toolName": "startTask",
              "type": "tool-result",
            },
          ],
          "role": "tool",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Task not found",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;

exports[`Plugin System > taskListPlugin > should include task list in system prompt via defEffect 1`] = `
[
  {
    "activeTools": [
      "startTask",
      "completeTask",
    ],
    "input": {
      "prompt": [
        {
          "content": "<taskList>
## Current Task Status

### In Progress (1)
  - [2] Implement

### Pending (1)
  - [1] Research

### Completed (1)
  - [3] Test

Use "startTask" to begin a pending task and "completeTask" when finished.
</taskList>",
          "role": "system",
        },
        {
          "content": [
            {
              "text": "Show task status",
              "type": "text",
            },
          ],
          "role": "user",
        },
      ],
    },
    "output": {
      "content": [
        {
          "text": "Tasks received!",
          "type": "text",
        },
      ],
      "finishReason": "stop",
    },
  },
]
`;
